--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ android {
 ext{
     lifecycle_version = "1.1.1"
     retrofit_version = "2.4.0"
+    stetho_version = "1.5.0"
 }
 
 dependencies {
@@ -45,6 +46,9 @@ dependencies {
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+
+    // Stetho, tool for debug
+    implementation "com.facebook.stetho:stetho:$stetho_version"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
