--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,19 +16,23 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            useProguard true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
-    }
-
-    dataBinding {
-        enabled = true
     }
 }
 
 ext {
     lifecycle_version = "1.1.1"
+    constraint_version = "1.1.3"
+    compatibility_version = "27.1.1"
     retrofit_version = "2.4.0"
     stetho_version = "1.5.0"
+    okhttp_version = "3.10.0"
+
+    google_map_version= "15.0.1"
+    google_map_util="0.5"
+
 }
 
 dependencies {
@@ -37,15 +41,15 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:27.1.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
-    implementation 'com.android.support:recyclerview-v7:27.1.1'
-    implementation 'com.android.support:design:27.1.1'
+    implementation "com.android.support:appcompat-v7:$compatibility_version"
+    implementation "com.android.support:recyclerview-v7:$compatibility_version"
+    implementation "com.android.support:design:$compatibility_version"
+    implementation "com.android.support.constraint:constraint-layout:$constraint_version"
 
     // network connection and gson integration
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation "com.squareup.okhttp3:logging-interceptor:3.10.0"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
@@ -55,8 +59,8 @@ dependencies {
     implementation "com.facebook.stetho:stetho-okhttp3:$stetho_version"
 
     // Google Map
-    implementation 'com.google.android.gms:play-services-maps:15.0.1'
-    implementation 'com.google.maps.android:android-maps-utils:0.5'
+    implementation "com.google.android.gms:play-services-maps:$google_map_version"
+    implementation "com.google.maps.android:android-maps-utils:$google_map_util"
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
